# ALGT

./: .gitignore  ALGT  ALGT.cabal  ALGT_Manual.html  LICENSE  Main.hs  MetaFunctionInterpreter.hs  Notes  Notes.hs  README.md  README.tex  ReductionTrees.txt  Stuff.txt  Test.hs  TypeSystem.hs  Utils.hs  addTodo  build.sh  commitTests  createDevAssets.sh  gradualization.lang  repl  stack.yaml  typesystem.lang  typings.txt  windows-build.bat
Demo/: DemoDyn.language  Readme.md  Template.language
Examples/: Burgiescript.language  Cobalt.html  Cobalt.style  DynamizeSTFL.language-changes  DynamizeSTFL.typesystem-changes  ELanguage.language  GTFL.example  GradualizeSTFL.language-changes  GradualizeSTFL.typesystem-changes  Imperative.language  Janlang.janlang  Janlang.typesystem  LSec.language  Language.language  Lisp.example  Lisp.typesystem  LiveCheck.language  LollyScript.rkt  Lollyscript.language  Lollyscript.typesystem  MD.language  Markdown.language  STFL.example  STFL.gradualization  STFL.html  STFL.language  STFL.typesystem  STFL.typesystem0  STFL0.example  STFL_bad.example  Shakespeare.example  Shakespeare.typesystem  SimpleHaskell.example  SimpleHaskell.typesystem  Style.language  Terminal.style  Test.butts  Test.language  Test.md  Test.test  (+14 more)
Examples/LSec/: GradLSec.language  LSec.language  LSecGrad.language-changes  LSecIntr.language-changes  lsec.LSec
Examples/burgiescript/: follow.bs  obstacle.bs  police.bs
Output/: EvaluationTrees.txt  GTFL.typesystem  NumberTrees.txt  TypingTrees.txt  typings.txt
Output/Old/: EvaluationTrees.txt  GTFL.typesystem  GraduallyTyped.txt  typings.txt
Parser/: AST.hs  BNFParser.hs  ExpressionParser.hs  MetaExpressionParser.hs  MetaFunctionParser.hs  MetaParser.hs  ParsingUtils.hs  Rules  STFL.typesystem  Stlc.example  StlcAST.hs  StlcParser.hs  TsAST.hs  TsParser.hs  TsTest.hs  Utils.hs
TypeSystem/: FunctionExpansion.hs  GaloisConnection.hs  MetaFunctionInterpreter.hs  MetaFunctionLift.hs  StlcGalois.hs
src/: ALGT.hs  ArgumentParser.hs  Assets.hs  AssetsHelper.hs  EvaluationTrees.txt  FunctionInterpreter.hs  Main.hs  MetaFunctionInterpreter.hs  NumberTrees.txt  PureMain.hs  Readme.md  RuleInterpreter.hs  Test.hs  Tests.hs  Todo.txt  TypeSystem.hs  TypingTrees.txt  Unification.hs  Utils.hs  search.sh  searchTodo.sh
src/AbstractInterpreter/: ASSubtract.hs  AbstractFunctionInterpreter.hs  AbstractInterpreter.hs  AbstractParseTree.hs  AbstractPatternMatcher.hs  AbstractSet.hs  AbstractSetFromString.hs  Assignment.hs  Constraints.hs  Data.hs  FullAnalysis.hs  FunctionAnalysis.hs  FunctionInterpreter.hs  MinimalTypes.hs  PatternMatcher.hs  QuickCheck.hs  RelationAnalysis.hs  RuleAnalysis.hs  RuleInterpreter.hs  Test.hs  Tools.hs  Unify.hs
src/Assets/: Cobalt.style  MinimalStyles.txt  Style.language  Style1.language  Terminal.style  Terminal.style1  White.style  White.style1  WhiteFlat.style  WhiteFlat.style1  language.lang  typesystem.lang
src/Assets/GTKSourceViewOptions/: AppearanceElems  BoolOptions.txt  ColorOptions  DefaultStyleElems  FloatOptions  Readme.md
src/Assets/IntegrationTests/: _0log___Test_STFL_language__plain  _10log___Test_STFL_language__irdouble_pointdouble_point__plain  _11log___Test_STFL_languageTest_examples_stfle_l__plain  _12log___Test_STFL_languageTest_examples_stfle_l_rarrow__plain  _13log___Test_STFL_languageTest_examples_stfle_l_rdouble_pointdouble_point__plain  _14log___Test_STFL_languageTest_examples_stfle_l__ptsvgParsetrees__plain  _15log___Test_STFL_language_cTest_DynamizeSTFL_language_changes__dlf__plain  _16log___Test_STFL_language_cTest_DynamizeSTFL_language_changes_cTest_GradualizeSTFL_language_changes__dlf__plain  _17log___Test_STFL_language__irarrow__plain  _18log___Test_STFL_languageTest_examples_stfle_l__tpProgress__plain  _19log___Test_STFL_languageTest_examples_stfle_l__tpa__plain  _1log___Test_STFL_language__dlf__plain  _20log___Test_STFL_languageTest_examples_stfle_l__tpProgress__ppp__plain  _21log___Test_STFL_languageTest_examples_stfle_l__tpa__ppp__plain  _22log___Test_Recursive_language__dlf__plain  _23log___Test_CommonSubset_language__dlf__plain  _24log___Test_FuncTypeErr_language__dlf__plain  _25log___Style_languageTerminal_stylestyleFile__html__plain  _26log___Test_STFLBool_languageTest_STFLBoolMismatch_stflboolexpr_l__plain  _26log___Test_STFLBool_languageTest_examples_stflexpr_l__plain  _27log___Style_languageTerminal_stylestyleFile__nc__html_no_css  _27log___Style_languageTerminal_stylestyleFile__nc__html_no_css__plain  _27log___Test_STFL_language__nc__css__plain  _28log___Style_languageTerminal_stylestyleFile__nc__html_no_css__plain  _2log___Test_STFL_language__lsvgSyntax_svg__plain  (+156 more)
src/Changer/: Changes.hs  ChangesParser.hs  Test.hs
src/Dynamize/: Dynamize.hs  Test.hs
src/Gradualization/: Gradualization.hs
src/Gradualize/: DynamicRuntime.hs  FunctionFixer.hs  Gradualize.hs  Test.hs
src/Graphs/: DirectedGraph.hs  ExportCalculator.hs  Lattice.hs  MinDistance.hs  Order.hs  PathFinder.hs  SearchCycles.hs  TreeShake.hs  UnionFind.hs
src/ParseTreeInterpreter/: FunctionInterpreter.hs  PropertyProver.hs  PropertyTester.hs  RuleInterpreter.hs
src/Parser/: BNFParser.hs  ExpressionParser.hs  FunctionParser.hs  MetaExpressionParser.hs  MetaFunctionParser.hs  MetaParser.hs  ParsingUtils.hs  RuleParser.hs  TargetLanguageParser.hs  TsParser.hs  TypeSystemParser.hs
src/SyntaxHighlighting/: AnsiPT.hs  AnsiParseTree.hs  AsAnsiPt.hs  AsHTML.hs  AsHTMLPt.hs  AsLatexPt.hs  AsParts.hs  AsSVGPt.hs  Coloring.hs  Highlighting.hs  ParseTreeImage.hs  Renderer.hs  Renderers.hs  Style.hs  typesystem-changes.lang
src/TypeSystem/: BNF.hs  Expression.hs  Function.hs  ParseTree.hs  Proof.hs  PropertyProof.hs  Relation.hs  Rule.hs  Syntax.hs  SyntaxStyle.hs  TypeSystem.hs  TypeSystemData.hs  Types.hs
src/Utils/: ArgumentParser.hs  CreateAssets.hs  Image.hs  LatticeImage.hs  ManualPreprocessor.hs  ParseTreeImage.hs  PureIO.hs  STFL.hs  Test.hs  Tests.hs  ToString.hs  ToStringExtra.hs  TypeSystemToString.hs  Unification.hs  UnificationTest.hs  Utils.hs  Version.hs  XML.hs
(+220 files in other folders)
