name:                ALGT
version:             0.1.18
synopsis:            Automated Language Generation Tool - Create your programming language
description:         Please see README.md
homepage:            https://github.com/pietervdvn/ALGT#readme
license:             BSD3
license-file:        LICENSE
author:              Pieter Vander Vennet
maintainer:          pietervdvn@gmail.com
copyright:           Left
category:            GPL
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     ALGT
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, containers, mtl, parsec, optparse-applicative >= 0.13, directory, microlens, microlens-th, text, blaze-svg, hashable, time, process, bytestring, ansi-wl-pprint
  default-language:    Haskell2010
  other-modules:
        Graphs.Lattice
        Graphs.PathFinder
        Graphs.SearchCycles
        TypeSystem
        TypeSystem.BNF
        TypeSystem.Expression
        TypeSystem.Function
        TypeSystem.ParseTree
        TypeSystem.Parser.BNFParser
        TypeSystem.Parser.ExpressionParser
        TypeSystem.Parser.FunctionParser
        TypeSystem.Parser.ParsingUtils
        TypeSystem.Parser.RuleParser
        TypeSystem.Parser.TargetLanguageParser
        TypeSystem.Parser.TypeSystemParser
        TypeSystem.Proof
        TypeSystem.PropertyProof
        TypeSystem.Relation
        TypeSystem.Rule
        TypeSystem.Syntax
        TypeSystem.SyntaxStyle
        TypeSystem.TypeSystem
        TypeSystem.TypeSystemData
        TypeSystem.Types
        Utils.Image
        Utils.LatticeImage
        Utils.ToString
        Utils.ToStringExtra
        Utils.Utils


executable ALGT
  hs-source-dirs:      src
  ghc-options:         -fno-warn-tabs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, mtl, parsec, optparse-applicative >= 0.13, directory, microlens, microlens-th, text, blaze-svg, hashable, time, process, bytestring, ansi-wl-pprint
  other-modules:       
        AbstractInterpreter.ASSubtract
        AbstractInterpreter.AbstractInterpreter
        AbstractInterpreter.AbstractSet
        AbstractInterpreter.Assignment
        AbstractInterpreter.FunctionAnalysis
        AbstractInterpreter.MinimalTypes
        AbstractInterpreter.PatternMatcher
        AbstractInterpreter.RelationAnalysis
        AbstractInterpreter.RuleAnalysis
        AbstractInterpreter.Tools
        Assets
        AssetsHelper
        Changer.Changes
        Changer.ChangesParser
        Dynamize.Dynamize
        Graphs.Lattice
        Graphs.PathFinder
        Graphs.SearchCycles
        ParseTreeInterpreter.FunctionInterpreter
        ParseTreeInterpreter.PropertyTester
        ParseTreeInterpreter.RuleInterpreter
        PureMain
        SyntaxHighlighting.AnsiPT
        SyntaxHighlighting.Coloring
        SyntaxHighlighting.Highlighting
        TypeSystem
        TypeSystem.BNF
        TypeSystem.Expression
        TypeSystem.Function
        TypeSystem.ParseTree
        TypeSystem.Parser.BNFParser
        TypeSystem.Parser.ExpressionParser
        TypeSystem.Parser.FunctionParser
        TypeSystem.Parser.ParsingUtils
        TypeSystem.Parser.RuleParser
        TypeSystem.Parser.TargetLanguageParser
        TypeSystem.Parser.TypeSystemParser
        TypeSystem.Proof
        TypeSystem.PropertyProof
        TypeSystem.Relation
        TypeSystem.Rule
        TypeSystem.Syntax
        TypeSystem.SyntaxStyle
        TypeSystem.TypeSystem
        TypeSystem.TypeSystemData
        TypeSystem.Types
        Utils.ArgumentParser
        Utils.CreateAssets
        Utils.Image
        Utils.LatticeImage
        Utils.ManualPreprocessor
        Utils.PureIO
        Utils.Test
        Utils.Tests
        Utils.ToString
        Utils.ToStringExtra
        Utils.Unification
        Utils.UnificationTest
        Utils.Utils
        Utils.Version
        Utils.XML
        AbstractInterpreter.AbstractFunctionInterpreter
        Gradualize.DynamicRuntime
        Gradualize.FunctionFixer
        Gradualize.Test
        Graphs.UnionFind
        SyntaxHighlighting.ParseTreeImage


